Overflow bug?

--- a/public/menu.css
+++ b/public/menu.css
@@ -48,7 +48,7 @@
 
     display: flex;
 
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
 
     overflow: auto;
